objects/Quote_Request_Summary__c.object
<CustomObject>
    <description>This object is used to store the request summary of the quote request data after is sent to UW.</description>
    <fields>
        <fullName>AFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASL_Fee_Type__c</fullName>
        <label>ASL Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>PEPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASO_Commissions_Annual__c</fullName>
        <label>ASO Commissions (Annual) ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASO_Commissions_PCPM__c</fullName>
        <label>ASO Commissions (PCPM) ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Access_Fee_Type__c</fullName>
        <label>Access Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of ADP</fullName>
                </value>
                <value>
                    <fullName>Per Capita</fullName>
                </value>
                <value>
                    <fullName>Built into Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Executive1_Name__c</fullName>
        <formula>Account_Sales_Executive1__r.FirstName +&apos; &apos;+Account_Sales_Executive1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive1__c</fullName>
        <label>Account Executive1</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive2_Name__c</fullName>
        <formula>Account_Sales_Executive2__r.FirstName +&apos; &apos;+ Account_Sales_Executive2__r.LastName</formula>
        <label>Account Executive2 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive2__c</fullName>
        <label>Account Executive2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_tx__c</fullName>
        <label>Account Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Executive1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is auto populated from the Account &apos;Account Executive1&apos; during the Quote process.</description>
        <label>Account/Sales Executive1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Executive2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is auto populated from Account&apos;s Account Executive 2 during the Quote process.</description>
        <label>Account/Sales Executive2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Health_Contracts__c</fullName>
        <label>Active Health Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Health_Members__c</fullName>
        <label>Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Fee_Type__c</fullName>
        <label>Administrative Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Capita</fullName>
                </value>
                <value>
                    <fullName>% of Net Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_commissions_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are commissions included?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Dental_Underwriter_Name__c</fullName>
        <formula>Dental_Underwriter__r.FirstName + &apos; &apos;+ Dental_Underwriter__r.LastName</formula>
        <label>Assigned Dental Underwriter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Star_Account_Number__c</fullName>
        <label>Blue Star Account Number</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bull_s_Eye__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bull&apos;s Eye</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Exceeded_Amt_Future__c</fullName>
        <description>2. Is any treatment expected in the next 12 months in excess of $10000 or more?</description>
        <inlineHelpText>2. Is any treatment expected in the next 12 months in excess of $10000 or more?</inlineHelpText>
        <label>Claim in excess of $10,000 in Future?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_Exceeded_Amt_Past__c</fullName>
        <description>1. In the past 12 months, has a claim been submitted in excess of $10,000?</description>
        <inlineHelpText>1. In the past 12 months, has a claim been submitted in excess of $10,000?</inlineHelpText>
        <label>Claim Exceeded $10,000 in the Past?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Target_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claims Target Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commissions_Billed_Separately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commissions Billed Seperately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_3rd_PartyVendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor/3rd Party Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Competitor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quote_Request_Summarys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Quote_Request_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looking the user of the person</description>
        <label>Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Aggregate__c</fullName>
        <label>Contract Term - Aggregate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/12</fullName>
                </value>
                <value>
                    <fullName>18/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>12/18</fullName>
                </value>
                <value>
                    <fullName>12/24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term_Individual__c</fullName>
        <label>Contract Term - Individual</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/12</fullName>
                </value>
                <value>
                    <fullName>18/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>PAID</fullName>
                </value>
                <value>
                    <fullName>12/18</fullName>
                </value>
                <value>
                    <fullName>12/24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Covered_ElseWhere__c</fullName>
        <label>Covered ElseWhere</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Account_Funding_Type__c</fullName>
        <label>Current Funding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Contribution_Type__c</fullName>
        <label>Current Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Dependent_Contribution__c</fullName>
        <label>Current Dependent Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employee_Contribution__c</fullName>
        <label>Current Employee Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DHMO_Current_Participation__c</fullName>
        <label>DHMO Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_to_Quote_Reason__c</fullName>
        <label>Declined to Quote Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Current_Participation__c</fullName>
        <label>Dental Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dental_Underwriter_Queue__c</fullName>
        <label>Dental Underwriter Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Underwriting &gt;200</fullName>
                </value>
                <value>
                    <fullName>Dental Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dental Underwriter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental_Underwriter_txt__c</fullName>
        <label>Dental Underwriter</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for carrier</description>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_days__c</fullName>
        <label>Dental(days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_for_Underwriting__c</fullName>
        <label>Department for Underwriting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>National/Major/Special Accounts</fullName>
                </value>
                <value>
                    <fullName>Downers Grove Large Group Accounts</fullName>
                </value>
                <value>
                    <fullName>Major National Accounts</fullName>
                </value>
                <value>
                    <fullName>Mid Market Accounts</fullName>
                </value>
                <value>
                    <fullName>Large Group Accounts</fullName>
                </value>
                <value>
                    <fullName>Mid Market(51-100)</fullName>
                </value>
                <value>
                    <fullName>National Accounts</fullName>
                </value>
                <value>
                    <fullName>Small Group Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERISA_Plan_Year__c</fullName>
        <label>ERISA Plan Year</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Dental_Contracts__c</fullName>
        <label>Expected Dental Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Contracts__c</fullName>
        <label>Expected Health Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Health_Members__c</fullName>
        <label>Expected Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Proposed Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>Minimum Premium</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>Prospective Premium</fullName>
                </value>
                <value>
                    <fullName>RSR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type_multi__c</fullName>
        <label>Funding Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Minimum Premium</fullName>
                </value>
                <value>
                    <fullName>Prem</fullName>
                </value>
                <value>
                    <fullName>Prospective Premium</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>RSR</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GA_Override__c</fullName>
        <label>GA Override (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>General_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>General Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCSC_Division__c</fullName>
        <label>HCSC Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMO_Current_Participation__c</fullName>
        <label>HMO Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Health_Commissions_PCPM__c</fullName>
        <label>Health Commissions PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Health_Commissions__c</fullName>
        <label>Health Commissions(%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Health_days__c</fullName>
        <label>Health(days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_HMO_plans_are_there__c</fullName>
        <label>How many HMO plans are there?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_current_health_plans__c</fullName>
        <label>How many current health plans?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_non_HMO_health_plans_are_there__c</fullName>
        <label>How many non-HMO health plans are there?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Network_Utilization_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Network Utilization Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <description>the actually error message received from backend</description>
        <label>Integration Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Response_Message__c</fullName>
        <description>capture the response message from outbound call to heron.</description>
        <label>Integration Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intergration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Rate Request To Heron</fullName>
                </value>
                <value>
                    <fullName>Received Initial Rate</fullName>
                </value>
                <value>
                    <fullName>Received Final Rate</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Duplicate_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Duplicate Quote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Formal_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Formal Bid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Note_Attachment_Modify_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capture the user who modified the Note &amp; Attachment from the trigger.</description>
        <label>Last Note &amp; Attachment Modify By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Note_Attachment_Title__c</fullName>
        <description>This field is used for email notification but is updated by the trigger, no showing to user on page.</description>
        <label>Late Note &amp; Attachment Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Current_Participation__c</fullName>
        <label>Life Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_days__c</fullName>
        <label>Life(days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_contributions_that_vary_by_product__c</fullName>
        <description>This field is used to capture the Proposed Dependent Health Contribution</description>
        <label>List contributions that vary by product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medicare_Retirees_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare Retirees Eligible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Discount_Guarantees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Network Discount Guarantees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_HMO_Current_Participation__c</fullName>
        <label>Non-HMO Current Participation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Insured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Attachment_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capture the user who created the Note &amp; Attachment from trigger, for email notification not show to user on page.</description>
        <label>Note &amp; Attachment Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Request_Summarys4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this counter is updated by the Note and Attachment counter. this field is used to trigger notification whenever Note &amp; Attachment is added to Quote Request summary.</description>
        <label>Note Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_tx__c</fullName>
        <description>Opportunity owner name pull from Opp</description>
        <label>Opportunity Owner</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Commisions__c</fullName>
        <label>Other Commissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Service__c</fullName>
        <label>Other Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PUG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PUG?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Time__c</fullName>
        <label>Part Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participants_Diagonsed_Risk_Condition_Hi__c</fullName>
        <inlineHelpText>4. Has any participant been diagnosed as having a risk condition?</inlineHelpText>
        <label>Participants Diagnosed Risk Condition?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participants_Disabled__c</fullName>
        <label>Participants Disabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percent_Enrolled__c</fullName>
        <label>Percent Enrolled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_HCSC_Account_Number__c</fullName>
        <label>Prior HCSC Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_HCSC_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prior HCSC Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Quote_Request_Summarys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Propose_Contribution_No_Explain_Box__c</fullName>
        <label>Please Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Contribution_Type__c</fullName>
        <label>Proposed Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Dependent_Contribution__c</fullName>
        <label>Proposed Dependent Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Employee_Contribution__c</fullName>
        <label>Proposed Employee Contribution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>